# Xtune

./: CMakeLists.txt  README.md  README_zh.md  config.h.in
Ptune4/: .gitignore  CMakeLists.txt  LICENSE.md  config.h.in
Ptune4/include/: data.h  help.h  settings.h  util.h  validate.h
Ptune4/src/: data.c  main.c  util.c  validate.c
Ptune4/src/benchmark/: benchmark.c
Ptune4/src/memtest/: rom_test.c  sdram_test.c  sram_test.c  test_address.c
Ptune4/src/menu/: benchmark.c  bsc.c  express.c  mem_data.c  settings.c
__legacy__/: LICENSE.md
__legacy__/Ftune/: AddinInfo.txt  Ftune.g1w  README.txt  README_J.txt  SH7355_CPG_BSC.h  common.c  common.h  ftune.c  ftune.h  ftune_batt.c  ftune_benchmark.c  ftune_benchmark.h  ftune_bscmod.c  ftune_bscmod.h  ftune_data.c  ftune_data.h  ftune_memcheck.c  ftune_memcheck.h  ftune_sub.c  ftune_sub.h  memtest.src
__legacy__/Ftune2/: AddinInfo.txt  README.txt  README_J.txt  RTC_GetTicks.src  batt.c  common.c  common.h  ftune2.c  ftune2.g1w  ftune2.h  ftune2_benchmark.c  ftune2_benchmark.h  ftune2_bscmod.c  ftune2_bscmod.h  ftune2_data.c  ftune2_data.h  ftune2_memcheck.c  ftune2_memcheck.h  ftune2_setup.c  ftune2_setup.h  ftune2_sub.c  ftune2_sub.h  memtest.src
__legacy__/Ftune3/: AddinInfo.txt  README.txt  README_J.txt  common.c  common.h  ftune3.c  ftune3.g1w  ftune3.h  ftune3_benchmark.c  ftune3_benchmark.h  ftune3_bscmod.c  ftune3_bscmod.h  ftune3_data.c  ftune3_data.h  ftune3_memcheck.c  ftune3_memcheck.h  ftune3_setup.c  ftune3_setup.h  ftune3_sub.c  ftune3_sub.h
__legacy__/Ptune2/: Makefile  README.txt  README_J.txt
__legacy__/Ptune2/src/: Ptune2.c  Ptune2.h  Ptune2_benchmark.c  Ptune2_benchmark.h  Ptune2_bscmod.c  Ptune2_bscmod.h  Ptune2_common.c  Ptune2_common.h  Ptune2_data.c  Ptune2_data.h  Ptune2_fkeyicon.c  Ptune2_memcheck.c  Ptune2_memcheck.h  Ptune2_setup.c  Ptune2_setup.h  Ptune2_sub.c  Ptune2_sub.h
__legacy__/Ptune3/: Makefile  README.txt  README_FR.txt  README_J.txt  make.bat
__legacy__/Ptune3/src/: Ptune3.c  Ptune3.h  Ptune3_benchmark.c  Ptune3_benchmark.h  Ptune3_bscmod.c  Ptune3_bscmod.h  Ptune3_common.c  Ptune3_common.h  Ptune3_data.c  Ptune3_data.h  Ptune3_fkeyicon.c  Ptune3_memcheck.c  Ptune3_memcheck.h  Ptune3_setup.c  Ptune3_setup.h  Ptune3_sub.c  Ptune3_sub.h  SH7305_CPG_BSC_DBSC.h
include/: bsc.h  data.h  mem_test.h  menu.h  settings.h  util.h  validate.h
src/: data.c  help.c  main.c  syscall.s  util.c  validate.c
src/benchmark/: benchmark.c  mem_bench.s  tick_count.s
src/memtest/: mem_read.s  mem_write.s  rom_test.c  sdram_test.c  sram_test.c
src/menu/: bsc.c  express.c  mem_data.c  settings.c
